--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   },
   "dependencies": {
     "@prisma/client": "^5.1.1",
+    "@tanstack/react-query": "^4.33.0",
     "@tanstack/react-table": "^8.9.3",
+    "@trpc/client": "^10.38.0",
+    "@trpc/react-query": "^10.38.0",
     "@types/node": "20.5.1",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
